# simple-prod-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/: auth.py  constants.py  db.json  main.py  model.py
tests/: conftest.py  pytest.ini  test_auth.py  test_endpoints.py
